<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientLoginActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/bold"
        android:text="@string/welcome_text"
        android:textColor="@color/blue"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/clientPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:width="300dp"
        android:height="60dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/_0xxxxxxxxx"
        android:inputType="phone"
        android:textColorHint="@color/blue"
        android:textSize="20sp"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints="" />

    <EditText
        android:id="@+id/clientPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="300dp"
        android:height="60dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColorHint="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientPhone"
        android:autofillHints="" />

    <Button
        android:id="@+id/clientLogInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="153dp"
        android:height="52dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:text="@string/connexion_btn_text"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/noAccountText"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientLogInBtn" />

    <TextView
        android:id="@+id/toClientSingupPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/create_acoount_text"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/clientLogInBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/is_it_seller_text"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/toSellerLoginPage"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/bold"
        android:text="@string/create_seller_text"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/toClientSingupPage"
        app:layout_constraintVertical_bias="0.846" />

    <CheckBox
        android:id="@+id/RemembreClientCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/bold"
        android:text="@string/se_rappeler_de_moi"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/clientLogInBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientPassword"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:src="@drawable/telephone"
        app:layout_constraintBottom_toBottomOf="@+id/clientPhone"
        app:layout_constraintEnd_toEndOf="@+id/clientPhone"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="@+id/clientPhone"
        app:layout_constraintTop_toTopOf="@+id/clientPhone"
        app:layout_constraintVertical_bias="0.527"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/clientShowPassword"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:src="@drawable/oeil"
        app:layout_constraintBottom_toBottomOf="@+id/clientPassword"
        app:layout_constraintEnd_toEndOf="@+id/clientPassword"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="@+id/clientPassword"
        app:layout_constraintTop_toTopOf="@+id/clientPassword"
        app:layout_constraintVertical_bias="0.527"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>