<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientSignupActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/bold"
        android:text="@string/welcome_text"
        android:textColor="@color/blue"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/sellerLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:width="300dp"
        android:height="60dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/votre_nom"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/sellerFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:height="60dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/votre_prenom"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellerLastName"
        app:layout_constraintVertical_bias="0.055"
        android:autofillHints="" />

    <EditText
        android:id="@+id/sellerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:height="60dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:ems="10"
        android:maxLength="10"
        android:fontFamily="@font/regular"
        android:hint="@string/_0xxxxxxxxx"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellerFirstName"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/sellerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:height="60dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellerPhone"
        app:layout_constraintVertical_bias="0.12"
        android:autofillHints="" />

    <Button
        android:id="@+id/sellerSignupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="153dp"
        android:height="56dp"
        android:background="@drawable/button"
        android:fontFamily="@font/regular"
        android:text="@string/s_inscrire"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellerPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/regular"
        android:text="@string/vous_avez_un_comte"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/toSellerLoginPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/toSellerLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/connexion_btn_text"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/tu_es_un_client"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toClientLoginPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/toClientLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/create_seller_text"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/toSellerLoginPage"
        app:layout_constraintVertical_bias="0.584" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sellerFirstName"
        app:layout_constraintEnd_toEndOf="@+id/sellerFirstName"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="@+id/sellerFirstName"
        app:layout_constraintTop_toTopOf="@+id/sellerFirstName"
        app:srcCompat="@drawable/user"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        app:layout_constraintBottom_toBottomOf="@+id/sellerPhone"
        app:layout_constraintStart_toStartOf="@+id/sellerPhone"
        app:layout_constraintTop_toTopOf="@+id/sellerPhone"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/telephone"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sellerLastName"
        app:layout_constraintEnd_toEndOf="@+id/sellerLastName"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="@+id/sellerLastName"
        app:layout_constraintTop_toTopOf="@+id/sellerLastName"
        app:layout_constraintVertical_bias="0.525"
        app:srcCompat="@drawable/user"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/sellerPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sellerPassword"
        app:layout_constraintEnd_toEndOf="@+id/sellerPassword"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="@+id/sellerPassword"
        app:layout_constraintTop_toTopOf="@+id/sellerPassword"
        app:srcCompat="@drawable/oeil"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>